# conway

./: CHANGELOG.md  README.md  conway.cabal
app/: Main.hs
src/: Graphics.hs
