cabal-version:      3.0
name:               conway
version:            0.1.0.0
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             nonomino
maintainer:         ontharros@gmail.com
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Conway
                      Graphics
                      World
    build-depends:    base ^>=4.16.4.0
                    , OpenGL
                    , GLUT
                    , array
                    , random
    hs-source-dirs:   src
    default-language: Haskell2010

executable conway
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        conway
    hs-source-dirs:   app
    default-language: Haskell2010
